--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,21 @@
     "type": "phpbb-extension",
     "description": "Connection log",
     "homepage": "http://phpbbguru.net",
-    "version": "1.0.0",
-    "time": "2017-01-16",
+    "version": "0.0.1",
+    "time": "2015-03-22",
     "license": "GPL-2.0",
     "authors": [
         {
             "name": "Sheer",
             "homepage": "http://phpbbguru.net",
-            "role": "Developer"
+            "role": "Support team"
         }
     ],
     "require": {
         "php": ">=5.3.3"
+    },
+   "require-dev": {
+      "phpbb/epv": "dev-master"
     },
     "extra": {
         "display-name": "Connection Log",
